# loam

./: AGENTS.md  README.md  SETUP-DEPLOYMENT.md  SETUP-STAGING.md  package-lock.json  package.json  vite.config.ts
app/: app.css  routeTree.gen.ts  router.tsx
app/routes/: -compare-loom.tsx  -compare-tella.tsx  -for-agencies.tsx  -for-video-editors.tsx  -home.tsx  -invite.tsx  -mono.tsx  -pricing.tsx  -publicPlaybackLoaders.test.ts  -publicPlaybackLoaders.ts  -publicRouteDataContracts.test.ts  -share.data.ts  -share.tsx  -watch.data.ts  -watch.tsx  __root.tsx  compare.loom.tsx  compare.tella.tsx  for.agencies.tsx  for.video-editors.tsx  index.tsx  invite.$token.tsx  mono.tsx  pricing.tsx  share.$token.tsx  sign-in.tsx  sign-up.tsx  watch.$publicId.tsx
convex/: auth.ts  billing.ts  billingHelpers.ts  billingWebhookSync.test.ts  billingWebhookSync.ts  desktopRecorder.test.ts  desktopRecorder.ts  mux.ts  muxActions.test.ts  muxActions.ts  muxPlayback.ts  playbackAccess.test.ts  playbackAccess.ts  playbackSessions.test.ts  playbackSessions.ts  projects.ts  reactions.ts  schema.ts  shareAccess.test.ts  shareLinkAuth.test.ts  shareLinkAuth.ts  shareLinkDefaults.test.ts  shareLinkDefaults.ts  shareLinks.ts  teams.ts  uploadSessions.test.ts  uploadSessions.ts  videoActions.ts  videoPresence.ts  videos.ts  watchEventActions.ts  watchEvents.test.ts  watchEvents.ts
convex/_generated/: api.d.ts
desktop/: ARCHITECTURE.md  BACKLOG.md  IMPLEMENTATION-PLAN.md  MACOS-FINISH-PLAN.md  README.md  index.html  package.json  to-do.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/examples/: recording-smoke.rs
desktop/src-tauri/src/: browser.rs  devices.rs  errors.rs  lib.rs  main.rs  permissions.rs  recorder.rs  state.rs  upload.rs
docs/: deployment-costs.md  deployment.md  pricing-strategy.md  setup.md  upstream.md
env/: convex.production.env.example  vercel.production.env.example
public/: robots.txt  sitemap.xml
scripts/: check-deploy-env.ts
src/components/: DashboardHeader.tsx  MarketingFooter.tsx  (+3 more)
(+99 files in other folders)
