[package]
name = "loam-desktop"
version = "0.1.0"
description = "Loam desktop recorder shell"
authors = ["Loam"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }

