[package]
name = "loam-desktop"
version = "0.1.0"
description = "Loam desktop recorder shell"
authors = ["Loam"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
cpal = "0.15.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
xcap = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/CapSoftware/cidre", rev = "bf84b67079a8", default-features = false, features = [
  "macos_12_7",
  "av",
  "async"
] }
futures = "0.3.31"
