[package]
name = "loam-desktop"
version = "0.1.0"
description = "Loam desktop recorder shell"
authors = ["Loam"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
cpal = "0.15.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.16"
url = "2.5.4"
xcap = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
cap-recording = { path = "../../Cap/crates/recording" }
cidre = { git = "https://github.com/CapSoftware/cidre", rev = "bf84b67079a8", default-features = false, features = [
  "macos_12_7",
  "av",
  "async"
] }
flume = "0.11.1"
futures = "0.3.31"
kameo = "0.17.2"
scap-targets = { path = "../../Cap/crates/scap-targets" }
